CMAKE_MINIMUM_REQUIRED (VERSION 3.20)
PROJECT(CPPJIEBA VERSION 1.0.0 LANGUAGES CXX)

SET(CMAKE_CXX_STANDARD 11)
#SET(CMAKE_CXX_FLAGS  "-Wno-sign-compare -Wno-class-memaccess")
SET(CMAKE_CXX_FLAGS  "-Wno-sign-compare")

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/deps ${PROJECT_SOURCE_DIR}/include)

if (CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
    set (CMAKE_INSTALL_PREFIX "/usr/local/cppjieba" CACHE PATH "default install path" FORCE )
endif()

ADD_SUBDIRECTORY(deps)
ADD_SUBDIRECTORY(test)

ENABLE_TESTING()
ADD_TEST(NAME ./test/test.run COMMAND ./test/test.run)
ADD_TEST(NAME ./load_test COMMAND ./load_test)
ADD_TEST(NAME ./demo COMMAND ./demo)
