CMAKE_MINIMUM_REQUIRED (VERSION 3.15)
PROJECT(CPPJIEBA VERSION 1.0.0 LANGUAGES CXX)
SET(CMAKE_CXX_STANDARD 11)
set(CMAKE_C_STANDARD 11)

OPTION(BUILD_TESTING "Build testing or not" OFF)
if (NOT DEFINED LIBRARY_TYPE)
    SET(LIBRARY_TYPE STATIC)
    # SET(LIBRARY_TYPE SHARED)
endif()

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/deps ${PROJECT_SOURCE_DIR}/include)
#if (CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
#    set (CMAKE_INSTALL_PREFIX "/usr/local/cppjieba" CACHE PATH "default install path" FORCE )
#endif()

ADD_SUBDIRECTORY(deps)

ADD_LIBRARY(jieba ${LIBRARY_TYPE} src/jieba.cpp)
set_target_properties(jieba PROPERTIES LINKER_LANGUAGE CXX)

if(BUILD_TESTING)
    ENABLE_TESTING()
    ADD_SUBDIRECTORY(test)
    ADD_TEST(NAME ./test/test.run COMMAND ./test/test.run)
    ADD_TEST(NAME ./load_test COMMAND ./load_test)
    ADD_TEST(NAME ./demo COMMAND ./demo)
endif(BUILD_TESTING)

install(
    TARGETS jieba
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib
    COMPONENT BaseDepLib
)
